# RG_translator

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: cpu_fast.yaml  default.yaml  gpu_quality.yaml
src/: app.py  asr.py  audio_in.py  config.py  logs.py  mt.py  pipeline.py  playback.py  tts.py  utils.py  vad.py
tests/: test_pipeline.py
tools/: benchmark.py  fetch_models.ps1
