[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "translator-rt"
version = "0.1.0"
description = "Offline real-time speech translator RU↔EN (Windows, Python)"
authors = [{ name = "Vladimir Zakharov" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.ruff]
line-length = 100
